--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,23 @@
  */
  @import "bootstrap-sprockets";  /*ここを追加*/
  @import "bootstrap";            /*ここを追加*/
+
+ *{
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+}
+
+.genre-index-headline{
+	width:270px;
+	margin:40px 0 50px 80px;
+	padding:0 20px 0 30px;
+	background-color:#eee;
+}
+
+.genre-edit-headline{
+	width:200px;
+	margin:40px 0 50px 80px;
+	padding:0 20px 0 30px;
+	background-color:#eee;
+}
