[Add] admin_items controller仮追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header style = "height:200px;background-color:black;"></header><!-- /header -->
+    <div class = "container">
+      <%= yield %>
+    </div>
   </body>
 </html>
