--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,10 @@
 	padding:0;
 	box-sizing:border-box;
 }
+
+.items-new-headline{
+	width:200px;
+	margin:40px 0 50px 0;
+	padding-left:30px;
+	background-color:#eee;
+}
