--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <header style = "height:200px;background-color:black;"></header><!-- /header -->
     <div class = "container">
       <%= yield %>
     </div>
