--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,14 @@
 
 .items-new-headline{
 	width:200px;
-	margin:40px 0 50px 0;
+	margin:40px 0 100px 0;
+	padding-left:30px;
+	background-color:#eee;
+}
+
+.items-index-headline{
+	width:200px;
+	margin:40px 0 100px 0;
 	padding-left:30px;
 	background-color:#eee;
 }
