--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -8,7 +8,7 @@
 
 			<div class = "item-form">
 
-				<%= form_for(@item) do |f| %>
+				<%= form_for :@item, url: admins_items_path do |f| %>
 
 					<% if @item.errors.any? %>
 
@@ -31,6 +31,7 @@
 					<% end %>
 
 					<div class = "field">
+						<%= f.label :image %>
 						<%= f.attachment_field :image %>
 					</div>
 
