--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -8,7 +8,7 @@
 
 			<div class = "item-form">
 
-				<%= form_for :@item, url: admins_items_path do |f| %>
+				<%= form_for(@item, url: admins_items_path) do |f| %>
 
 					<% if @item.errors.any? %>
 
@@ -31,7 +31,6 @@
 					<% end %>
 
 					<div class = "field">
-						<%= f.label :image %>
 						<%= f.attachment_field :image %>
 					</div>
 
@@ -57,7 +56,7 @@
 
 					<div class = "field">
 						<%= f.label :販売ステータス %>
-						<%= f.select 'is_active', options_for_select([['販売中','1'],['売切れ','2']]) %>
+						<%= f.select 'is_active', options_for_select([['販売中',1],['売切れ',0]]), include_blank: "選択して下さい" %>
 					</div>
 
 					<div class = "actions">
