[Add] 機能一応完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,13 @@
 	background-color:#eee;
 }
 
+.items-show-headline{
+	width:200px;
+	margin:40px 0 100px 0;
+	padding-left:30px;
+	background-color:#eee;
+}
+
 /*ページネーション自体のデザイン*/
 .pagination>li>a {
   border: none;     /*枠線をなくす*/
