--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -44,7 +44,7 @@
 							<td style = "width:30%;padding:10px;font-size:18px;border-bottom:2px solid black;
 										line-height:50px;">
 
-								<%= item.name %>
+								<%= link_to item.name, admins_item_path(item.id) %>
 
 							</td>
 
