--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -51,7 +51,7 @@
 
 					<div class = "field">
 						<%= f.label :税抜価格 %>
-						<%= f.number_field :price %>
+						<%= f.number_field :price %>円
 					</div>
 
 					<div class = "field">
