--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,29 +1,36 @@
-<h2>Sign up</h2>
+<div class="container">
+  <h3 class="row"><span class="bg-info">新規会員登録画面</span></h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "customers/customers/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal ", novalidate: "novalidate" }) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= render "customers/shared/error_messages", resource: resource %>
+    <%= render "customers/customer_form_item",f:f %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <%= f.label "パスワード", class: "col-xs-2 control-label" %>
+      <div class="col-xs-3">
+        <%= f.password_field :password, autocomplete: "new-password", class:"form-control", placeholder: "パスワード（6文字以上）" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <%= f.label "パスワード（確認）", class: "col-xs-2 control-label" %>
+      <div class="col-xs-3">
+        <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "new-password", placeholder:  "パスワードの確認" %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <div class="col-xs-offset-3 col-xs-2">
+        <%= f.submit "新規登録", class:"btn btn-success btn-block" %>
+      </div>
+    </div>
 
-<%= render "customers/customers/shared/links" %>
+    <div class="row">
+    <h3 ><span class="bg-info">既に登録済みの方</span></h3>
+        <div class="col-xs-11 col-xs-offset-1">
+          <p><%= link_to(new_customer_session_path) do %>こちら<% end %> からログインしてください。</p>
+        </div>
+    </div>
+  <% end %>
+</div>
