--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h3 class="row"><span class="bg-info">新規会員登録画面</span></h3>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal ", novalidate: "novalidate" }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: customers_registration_path, html: { class: "form-horizontal ", novalidate: "novalidate" }) do |f| %>
 
     <%= render "customers/shared/error_messages", resource: resource %>
     <%= render "customers/customer_form_item",f:f %>
