--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,12 @@
 	box-sizing:border-box;
 }
 
+.clearfix:after{
+	content:"";
+	display:block;
+	clear:both;
+}
+
 .items-new-headline{
 	width:200px;
 	margin:40px 0 100px 0;
