--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -6,7 +6,7 @@
         <div class="row">
           <strong>登録情報</strong>
           <%= link_to '編集する',edit_customers_path, class: "btn btn-primary" %>
-          <%= link_to 'パスワードを変更する', new_customer_password_path(@customer), class: "btn btn-primary" %>
+          <%= link_to 'パスワードを変更する', edit_customer_registration_path, class: "btn btn-primary" %>
         </div>
       <table class="row table table-bordered">
         <tr>
