--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -3,7 +3,7 @@
     <%= form_for(@customer ,url:customers_path,method: :patch, html: { class: "form-horizontal", novalidate: "novalidate" }) do |f| %>
       <%= render "customers/customer_form_item",f:f %>
         <%= f.submit "編集内容を保存する", class:"btn btn-success" %>
-        <%= link_to '退会する', unsubscribe_customer_path(current_customer.id), class: "btn btn-danger" %>
+        <%= link_to '退会する', unsubscribe_customer_path, class: "btn btn-danger" %>
       </div>
     <% end %>
   </div>
