--- a/app/views/customers/customers/unsubscribe.html.erb
+++ b/app/views/customers/customers/unsubscribe.html.erb
@@ -7,7 +7,7 @@
   </p>
 
   <div class="">
-    <%= link_to '退会しない', customer_path, class: "btn btn-primary" %>
-    <%= link_to '退会する', withdrow_customer_path, method: :patch, class: "btn btn-danger" %>
+    <%= link_to '退会しない', customers_path, class: "btn btn-primary" %>
+    <%= link_to '退会する', withdraw_customer_path, method: :patch, class: "btn btn-danger" %>
   </div>
 </div>
