--- a/app/views/customers/homes/top.html.erb
+++ b/app/views/customers/homes/top.html.erb
@@ -1,1 +1,28 @@
-<h1>homes#top</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <%= render "layouts/genre_search", genres: @genres %>
+    </div>
+    <div class="col-lg-6">
+      ようこそ、NaganoCakeへ！
+      このサイトは、ケーキ販売のECサイトになります。
+      会員でない方も商品の閲覧はできますが、
+      購入には会員登録が必要になります。
+      <h1>オススメ商品</h1>
+
+      <div>
+         
+
+
+
+
+
+
+
+
+
+         
+      </div>
+    </div>
+  </div>
+</div>
