--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,55 +1,57 @@
-<div class = "row">
+<div class = "container">
 
-	<div class = "col-xs-6">
+	<h3 class = "row"><span class = "bg-info">ジャンル編集</span></h3>
 
-		<section class = "genre-edit">
+	<%= form_for(@genre, url: admins_genre_path) do |f| %>
 
-			<h3 class = "genre-edit-headline">ジャンル編集</h3>
-
-			<div class = "genre-form" style = "padding-bottom:70px;">
-
-				<%= form_for(@genre, url: admins_genre_path) do |f| %>
-
-					<% if @genre.errors.any? %>
-
-						<section class = "alert alert-warning" style = "border:none; background-color:white;">
-
-				      		<h3 class = "error-headline" style = "margin-top:0; color:red;">
-				      			<%= pluralize(@genre.errors.count, "error") %> prohibited this book from being saved:
-				      		</h3>
-
-							<ul class = "error-list" style = "margin-left:30px;">
-
-								<% @genre.errors.full_messages.each do |message| %>
-									<li class = "errors" style = "color:red;"><%= message %></li>
-								<% end %>
-
-							</ul>
-
-						</section>
-
+		<% if @genre.errors.any? %>
+			<section>
+	      		<h3>
+	      			<%= pluralize(@genre.errors.count, "error") %> prohibited this book from being saved:
+	      		</h3>
+				<ul>
+					<% @genre.errors.full_messages.each do |message| %>
+						<li><%= message %></li>
 					<% end %>
+				</ul>
+			</section>
+		<% end %>
 
-					<%= f.label :name, 'ジャンル' %>
-					<%= f.text_field :name, :class => "name-field",
-						:style => 'width:180px; margin:0 5px 0 10px; border:1px solid black; border-radius:0;' %>
-
-				  	<%= f.radio_button :is_active, :true %>
-				  	<%= f.label :is_active, "有効", value: :true,
-				  		:style => "display: inline-block; margin:0 20px 0 5px; font-size:20px;colo" %>
-
-				  	<%= f.radio_button :is_active, :false %>
-				  	<%= f.label :is_active, "無効", value: :false,
-				  		:style => "display: inline-block; margin:0 20px 0 5px; font-size:20px;" %>
-
-			  		<%= f.submit '変更を保存する' %>
-
-				<% end %>
-
+		<div class = "form-group">
+			<div class = "row">
+				<%= f.label :name, 'ジャンル', class: "col-xs-2 control-label" %>
+				<div class = "col-xs-5">
+					<%= f.text_field :name %>
+				</div>
 			</div>
+		</div>
 
-		</section>
+		<div class = "form-group">
+			<div class = "row">
+				<div class = "col-xs-3">
+		  			<%= f.radio_button :is_active, :true %>
+				</div>
+		  		<%= f.label :is_active, "有効", value: :true, class: "col-xs-2 control-label" %>
+			</div>
+		</div>
 
-	</div>
+		<div class = "form-group">
+			<div class = "row">
+				<div class = "col-xs-3">
+				  	<%= f.radio_button :is_active, :false %>
+				</div>
+			  	<%= f.label :is_active, "無効", value: :false, class: "col-xs-2 control-label" %>
+			</div>
+		</div>
+
+		<div class = "form-action">
+			<div class = "row">
+				<div class = "col-xs-3">
+	  				<%= f.submit '変更を保存する', class:"btn btn-success" %>
+				</div>
+			</div>
+		</div>
+
+	<% end %>
 
 </div>
