--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,9 +1,14 @@
 <div class = "container">
 
-	<h3 class = "row"><span class = "bg-info">ジャンル編集</span></h3>
+	<div class = "row my-5">
+		<div class = "offset-md-1">
+			<h3><span class = "px-4 bg-light">ジャンル編集</span></h3>
+		</div>
+	</div>
 
 	<%= form_for(@genre, url: admins_genre_path) do |f| %>
 
+		<!-- エラー表示 -->
 		<% if @genre.errors.any? %>
 			<section>
 	      		<h3>
@@ -17,39 +22,17 @@
 			</section>
 		<% end %>
 
-		<div class = "form-group">
-			<div class = "row">
-				<%= f.label :name, 'ジャンル', class: "col-xs-2 control-label" %>
-				<div class = "col-xs-5">
-					<%= f.text_field :name %>
-				</div>
-			</div>
-		</div>
+		<div class = "row">
+			<%= f.label :name, 'ジャンル', class: "mr-3 pt-2 control-label" %>
+			<%= f.text_field :name %>
 
-		<div class = "form-group">
-			<div class = "row">
-				<div class = "col-xs-3">
-		  			<%= f.radio_button :is_active, :true %>
-				</div>
-		  		<%= f.label :is_active, "有効", value: :true, class: "col-xs-2 control-label" %>
-			</div>
-		</div>
+  			<%= f.radio_button :is_active, :true, class: "mt-3 mr-3 ml-2" %>
+	  		<%= f.label :is_active, "有効", value: :true, class: "d-flex align-items-center" %>
 
-		<div class = "form-group">
-			<div class = "row">
-				<div class = "col-xs-3">
-				  	<%= f.radio_button :is_active, :false %>
-				</div>
-			  	<%= f.label :is_active, "無効", value: :false, class: "col-xs-2 control-label" %>
-			</div>
-		</div>
+		  	<%= f.radio_button :is_active, :false, class: "mt-3 mr-3 ml-4" %>
+		  	<%= f.label :is_active, "無効", value: :false, class: "d-flex align-items-center" %>
 
-		<div class = "form-action">
-			<div class = "row">
-				<div class = "col-xs-3">
-	  				<%= f.submit '変更を保存する', class:"btn btn-success" %>
-				</div>
-			</div>
+			<%= f.submit '変更を保存する', class:"ml-4 btn btn-success" %>
 		</div>
 
 	<% end %>
