--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,68 +1,75 @@
 <div class = "container">
 
-	<h3 class = "row"><span class = "bg-info">ジャンル一覧・追加</span></h3>
-
-	<div class = "row" style = "margin-bottom:50px;">
-		<%= form_for(@genre, url: admins_genres_path) do |f| %>
-
-			<% if @genre.errors.any? %>
-				<section>
-		      		<h3>
-		      			<%= pluralize(@genre.errors.count, "error") %> prohibited this book from being saved:
-		      		</h3>
-					<ul>
-						<% @genre.errors.full_messages.each do |message| %>
-							<li><%= message %></li>
-						<% end %>
-					</ul>
-				</section>
-			<% end %>
-
-			<%= f.label :name, 'ジャンル' %>
-			<%= f.text_field :name, :style => 'width:180px; margin:0 5px 0 10px; border:1px solid black; border-radius:0;' %>
-		  	<%= f.radio_button :is_active, :true %>
-		  	<%= f.label :is_active, "有効", value: :true, :style => "display: inline-block; margin:0 20px 0 5px; font-size:20px;colo" %>
-		  	<%= f.radio_button :is_active, :false %>
-		  	<%= f.label :is_active, "無効", value: :false, :style => "display: inline-block; margin:0 20px 0 5px; font-size:20px;" %>
-	  		<%= f.submit '追加', class:"btn btn-success" %>
-
-		<% end %>
+	<div class = "row my-5">
+		<div class = "offset-md-1">
+			<h3><span class = "px-4 bg-light">ジャンル一覧・追加</span></h3>
+		</div>
 	</div>
 
-	<table style = "width:85%;">
-		<thead>
-			<tr style = "border-top:2px solid #ccc;border-bottom:2px solid #ccc;">
-				<th style = "width:30%;padding:10px;font-size:18px;background-color:#eee;">ジャンル</th>
-				<th style = "width:30%;padding:10px;font-size:18px;background-color:#eee;">状態</th>
-				<th style = "width:30%;padding:10px;font-size:18px;background-color:#eee;"></th>
-			</tr>
-		</thead>
-		<% @genres.each do |genre| %>
-			<tbody>
-				<tr>
-					<td style = "width:30%;padding:15px;font-size:18px;border-bottom:2px solid #eee;
-								line-height:50px;">
-						<%= genre.name %>
-					</td>
-					<td style = "width:30%;padding:15px;font-size:18px;border-bottom:2px solid #eee;
-								line-height:50px;">
-						<% if genre.is_active == true %>
-							有効
-						<% elsif genre.is_active == false %>
-							無効
-						<% end %>
-					</td>
-					<td style = "width:30%;padding:15px;font-size:18px;border-bottom:2px solid #eee;">
-						<%= link_to edit_admins_genre_path(genre.id) do %>
-							<button class="btn btn-secondary btn-lg" style = "width:150px;background-color:blue;
-									color:white;" >
-								編集する
-							</button>
-						<% end %>
-					</td>
-				</tr>
-			</tbody>
+	<%= form_for(@genre, url: admins_genres_path) do |f| %>
+
+		<!-- エラー表示 -->
+		<% if @genre.errors.any? %>
+			<section>
+	      		<h3>
+	      			<%= pluralize(@genre.errors.count, "error") %> prohibited this book from being saved:
+	      		</h3>
+				<ul>
+					<% @genre.errors.full_messages.each do |message| %>
+						<li><%= message %></li>
+					<% end %>
+				</ul>
+			</section>
 		<% end %>
-	</table>
+
+		<div class = "row">
+			<%= f.label :name, 'ジャンル', class: "mr-3 pt-2 control-label" %>
+			<%= f.text_field :name %>
+
+  			<%= f.radio_button :is_active, :true, class: "mt-3 mr-3 ml-2" %>
+	  		<%= f.label :is_active, "有効", value: :true, class: "d-flex align-items-center" %>
+
+		  	<%= f.radio_button :is_active, :false, class: "mt-3 mr-3 ml-4" %>
+		  	<%= f.label :is_active, "無効", value: :false, class: "d-flex align-items-center" %>
+
+			<%= f.submit '追加', class: "ml-4 btn btn-primary" %>
+		</div>
+
+	<% end %>
+
+	<div class = "row">
+		<div class = "col-md-6">
+			<table class = "mt-5 table table-hover">
+				<thead class = "thead-light">
+					<tr>
+						<th>ジャンル</th>
+						<th>状態</th>
+						<th></th>
+					</tr>
+				</thead>
+				<% @genres.each do |genre| %>
+					<tbody>
+						<tr>
+							<td>
+								<%= genre.name %>
+							</td>
+							<td>
+								<% if genre.is_active == true %>
+									有効
+								<% elsif genre.is_active == false %>
+									無効
+								<% end %>
+							</td>
+							<td>
+								<%= link_to edit_admins_genre_path(genre.id) do %>
+									<button class = "btn btn-primary">編集する</button>
+								<% end %>
+							</td>
+						</tr>
+					</tbody>
+				<% end %>
+			</table>
+		</div>
+	</div>
 
 </div>
