--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -1,10 +1,10 @@
-<div class = "row">
-
-	<div class = "col-xs-6">
-
-		<section class = "items-new">
-
-			<h3 class = "items-new-headline">商品新規登録</h3>
+<div class = "container">
+	<div class = "row my-5">
+		<div class = "offset-md-1">
+			<h3><span class = "px-4 bg-light">商品新規登録</span></h3>
+		</div>
+	</div>
+</div>
 
 			<div class = "item-form">
 
@@ -66,9 +66,3 @@
 				<% end %>
 
 			</div>
-
-		</section>
-
-	</div>
-
-</div>
