--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -1,68 +1,61 @@
 <div class = "container">
+
 	<div class = "row my-5">
 		<div class = "offset-md-1">
 			<h3><span class = "px-4 bg-light">商品新規登録</span></h3>
 		</div>
 	</div>
-</div>
 
-			<div class = "item-form">
+	<%= form_for(@item, url: admins_items_path) do |f| %>
 
-				<%= form_for(@item, url: admins_items_path) do |f| %>
-
-					<% if @item.errors.any? %>
-
-						<section class = "alert alert-warning" style = "border:none; background-color:white;">
-
-				      		<h3 class = "error-headline" style = "margin-top:0; color:red;">
-				      			<%= pluralize(@item.errors.count, "error") %> prohibited this book from being saved:
-				      		</h3>
-
-							<ul class = "error-list" style = "margin-left:30px;">
-
-								<% @item.errors.full_messages.each do |message| %>
-									<li class = "errors" style = "color:red;"><%= message %></li>
-								<% end %>
-
-							</ul>
-
-						</section>
-
+		<!-- エラー表示 -->
+		<% if @item.errors.any? %>
+			<section>
+	      		<h3>
+	      			<%= pluralize(@item.errors.count, "error") %> prohibited this book from being saved:
+	      		</h3>
+				<ul>
+					<% @item.errors.full_messages.each do |message| %>
+						<li><%= message %></li>
 					<% end %>
+				</ul>
+			</section>
+		<% end %>
 
-					<div class = "field">
-						<%= f.attachment_field :image %>
+		<div class = "col-md-9">
+			<div class = "row">
+				<div class = "col-md-6">
+					<%= f.attachment_field :image %>
+				</div>
+				<div class = "col-md-6">
+					<div class = "row mb-3">
+					<%= f.label :商品名, class: "col-md-3 d-flex align-items-center" %>
+					<%= f.text_field :name, class: "col-md-9" %>
 					</div>
-
-					<div class = "field">
-						<%= f.label :商品名 %>
-						<%= f.text_field :name %>
+					<div class = "row mb-3">
+					<%= f.label :商品説明, class: "col-md-3 d-flex align-items-center" %>
+					<%= f.text_area :introduction, class: "col-md-9" %>
 					</div>
-
-					<div class = "field">
-						<%= f.label :商品説明 %>
-						<%= f.text_area :introduction %>
+					<div class = "row mb-3">
+					<%= f.label :ジャンル, class: "col-md-3 d-flex align-items-center" %>
+					<%= f.collection_select :genre_id, Genre.all, :id, :name %>
 					</div>
-
-					<div class = "field">
-						<%= f.label :ジャンル %>
-						<%= f.collection_select :genre_id, Genre.all, :id, :name %>
+					<div class = "row mb-3">
+					<%= f.label :税抜価格, class: "col-md-3 d-flex align-items-center" %>
+					<%= f.number_field :price, class: "col-md-8" %><span class = "col-md-1 pt-2">円</span>
 					</div>
-
-					<div class = "field">
-						<%= f.label :税抜価格 %>
-						<%= f.number_field :price %>円
+					<div class = "row mb-3">
+					<%= f.label :販売ステータス, class: "col-md-3 d-flex align-items-center" %>
+					<%= f.select 'is_active', options_for_select([['販売中',1],['売切れ',0]]), include_blank: "選択して下さい" %>
 					</div>
-
-					<div class = "field">
-						<%= f.label :販売ステータス %>
-						<%= f.select 'is_active', options_for_select([['販売中',1],['売切れ',0]]), include_blank: "選択して下さい" %>
-					</div>
-
-					<div class = "actions">
-						<%= f.submit '新規登録' %>
-					</div>
-
-				<% end %>
-
+				</div>
 			</div>
+		</div>
+
+		<div class = "col-md-11 clearfix">
+			<%= f.submit '新規登録', class: "float-right btn btn-success" %>
+		</div>
+
+	<% end %>
+
+</div>
