--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,15 @@
   </head>
 
   <body>
-    <header style = "height:200px;border-bottom:2px solid black">
-      <div class = "container" style = "width:100%;">
+    <header>
+      <div class = "container">
         <div class = "row">
-          <div class = "col-xs-12 clearfix">
-            <div class = "header-left" style = "float:left;padding-top:50px;">
+          <div class = "col-md-6">
+            <div>
               <%= image_tag 'logo_img.png', size: '400x100' %>
             </div>
+          </div>
+          <div class = "col-xs-12 clearfix">
             <div class = "header-right" style = "float:right;">
               <ul class="nav navbar-nav navbar-right">
                 <!-- 会員ログイン後 -->
