--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -9,7 +9,7 @@
 	<div class = "col-md-8">
 		<div class = "row">
 			<div class = "col-md-6">
-				<%= attachment_image_tag @item, :image, format: 'jpeg', size: "250x200", fallback: "/no_image.jpg",
+				<%= attachment_image_tag @item, :image, format: 'jpeg', size: "250x200", fallback: "no_image.jpg",
 				class: "offset-md-2" %>
 			</div>
 			<div class = "col-md-6">
