--- a/app/views/customers/cart_items/index.html.erb
+++ b/app/views/customers/cart_items/index.html.erb
@@ -8,11 +8,10 @@
     <th>小計</th>
     <th></th>
   </tr>
-  <% @cart_items.each do |cart_item|%>
+  <% current_customer.cart_items.each do |cart_item| %>
   <tr>
-    <td>
-      <%= cart_item.item.name %></td>
-    <td><%= cart_item.item.price %></td>
+    <td><%= cart_item.item.name %></td>
+    <td><%= cart_item.item.price %>円</td>
 
     <td>
       <%= form_for (cart_item) do |f|%>
@@ -22,7 +21,7 @@
     </td>
 
 
-    <td><%= cart_item.quantity * cart_item.item.price %></td>
+    <td><%= cart_item.subtotal_price %></td>
     <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
   </tr>
   <% end %>
@@ -31,5 +30,6 @@
 <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
 
 <div class="">合計金額</div>
+<td class="text-right"><%= @customer.cart_item_sum %>円</td>
 
 <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
