--- a/app/views/customers/orders/confirm.html.erb
+++ b/app/views/customers/orders/confirm.html.erb
@@ -40,19 +40,31 @@
         </div>
       </div>
 
-<div class="confirm-info row">
-        <table>
-          <tr>
-            <th class="col-xs-4">お支払い方法</th>
-            <td class="col-xs-8"><%= @order.payment_method %></td>
-          </tr>
-          <tr>
-            <th class="col-xs-4">お届け先</th>
-            <td class="col-xs-8">
-              <%= @order.postal_code %>
-              <%= @order.shipping_address %><br>
-              <%= @order.delivery_name %>
-            </td>
-          </tr>
-        </table>
-      </div>
+<div class="">
+  <table>
+    <tr>
+      <th class="col-xs-4">お支払い方法</th>
+      <td class="col-xs-8"><%= @order.payment_method %></td>
+    </tr>
+    <tr>
+      <th class="col-xs-4">お届け先</th>
+      <td class="col-xs-8">
+        <%= @order.postal_code %><br>
+        <%= @order.shipping_address %><br>
+        <%= @order.delivery_name %>
+      </td>
+    </tr>
+  </table>
+</div>
+
+<div class="">
+  <%= form_for @order do |f| %>
+    <%= f.hidden_field :postal_code, value: @order.postal_code %>
+    <%= f.hidden_field :billing_amount, value: @order.billing_amount %>
+    <%= f.hidden_field :shipping_address, value: @order.shipping_address %>
+    <%= f.hidden_field :delivery_name, value: @order.delivery_name %>
+    <%= f.hidden_field :payment_method, value: @order.payment_method %>
+    <%= f.submit "購入を確定する", class:"btn btn-primary" %>
+  <% end %>
+
+</div>
