--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,76 +13,79 @@
 
   <body>
     <header>
-      <div class = "container">
-        <div class = "row">
-          <div class = "col-md-6">
-            <div>
-              <%= image_tag 'logo_img.png', size: '400x100' %>
-            </div>
+      <div class = "container-fluid">
+        <div class = "row pt-5">
+          <div class = "col-md-3 pt-2">
+            <%= image_tag 'logo_img.png', size: '300x100' %>
           </div>
-          <div class = "col-xs-12 clearfix">
-            <div class = "header-right" style = "float:right;">
-              <ul class="nav navbar-nav navbar-right">
+
+          <div class = "col-md-9 pt-5">
+            <nav class = "float-right">
+              <ul class = "nav bg-info">
+                <!-- 管理者ログイン後 -->
+                <% if admin_signed_in? %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "商品一覧", admins_items_path, class: "btn btn-dark" %>
+                  </li>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "会員一覧", admins_customers_path, class: "btn btn-dark" %>
+                  </li>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-dark" %>
+                  </li>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "ジャンル一覧", admins_genres_path, class: "btn btn-dark" %>
+                  </li>
+                  <li class = "nav-item mr-5 ml-5">
+                    <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-warning" %>
+                  </li>
                 <!-- 会員ログイン後 -->
-                <% if customer_signed_in? %>
-                  <li>
+                <% elsif customer_signed_in? %>
+                  <li class = "nav-item ml-5 pt-2">
                     ようこそ、<%= current_customer.family_name %><%= current_customer.first_name %>さん！
                   </li>
-                  <li>
-                    <%= link_to "マイページ", customers_path %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "マイページ", customers_path, class: "btn btn-dark" %>
                   </li>
-                  <li>
-                    <%= link_to "商品一覧", items_path %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "商品一覧", items_path, class: "btn btn-dark" %>
                   </li>
-                  <li>
-                    <%= link_to "カート", cart_items_path %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "カート", cart_items_path, class: "btn btn-dark" %>
                   </li>
-                  <li>
-                    <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-                  </li>
-                <!-- 管理者ログイン後 -->
-                <% elsif admin_signed_in? %>
-                  <li>
-                    <%= link_to "商品一覧", admins_items_path %>
-                  </li>
-                  <li>
-                    <%= link_to "会員一覧", admins_customers_path %>
-                  </li>
-                  <li>
-                    <%= link_to "注文履歴一覧", admins_orders_path %>
-                  </li>
-                  <li>
-                    <%= link_to "ジャンル一覧", admins_genres_path %>
-                  </li>
-                  <li>
-                    <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+                  <li class = "nav-item mr-5 ml-5">
+                    <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-warning" %>
                   </li>
                 <!-- ログイン前 -->
                 <% else %>
-                  <li>
-                    <%= link_to "About", homes_about_path %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "About", homes_about_path, class: "btn btn-dark" %>
                   </li>
-                  <li>
-                    <%= link_to "商品一覧", items_path %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "商品一覧", items_path, class: "btn btn-dark" %>
                   </li>
-                  <li>
-                    <%= link_to "新規登録", new_customers_registration_path %>
+                  <li class = "nav-item ml-5">
+                    <%= link_to "新規登録", new_customers_registration_path, class: "btn btn-dark" %>
                   </li>
-                  <li>
-                    <%= link_to "ログイン", new_customer_session_path %>
+                  <li class = "nav-item mr-5 ml-5">
+                    <%= link_to "ログイン", new_customer_session_path, class: "btn btn-warning" %>
                   </li>
                 <% end %>
               </ul>
-              <div class = "search-box">
+            </nav>
+
+            <% if admin_signed_in? %>
+              <div class = "col-md-1">
                 <%= form_tag(admins_searches_path, method: :get) do %>
                   <%= text_field_tag(:word) %>
                   <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
-                  <%= submit_tag '検索' %>
+                  <%= submit_tag '検索', class: "btn btn-primary" %>
                 <% end %>
               </div>
-            </div>
+            <% end %>
           </div>
         </div>
+
       </div>
     </header><!-- /header -->
     <%= yield %>
