--- a/app/views/customers/cart_items/index.html.erb
+++ b/app/views/customers/cart_items/index.html.erb
@@ -1,7 +1,9 @@
 <h1>ショッピングカート</h1>
-<%= link_to "カートを空にする", cart_items_path, method: :delete, class: "btn btn-danger" %>
-<table class="table">
-  <tr>
+<div class="text-right">
+  <%= link_to "カートを空にする", cart_items_path, method: :delete, class: "btn btn-danger" %>
+</div>
+<table class="table table-bordered">
+  <tr class="active">
     <th>商品名</th>
     <th>単価(税込)</th>
     <th>数量</th>
@@ -11,9 +13,9 @@
   <% @cart_items.each do |cart_item|%>
   <tr>
     <td>
+      <%= attachment_image_tag cart_item.item, :image, format: 'jpeg', size: "50x50" %>
       <%= cart_item.item.name %></td>
-    <td><%= cart_item.item.price %></td>
-
+    <td><%= (cart_item.item.price * 1.1).floor %></td>
     <td>
       <%= form_for (cart_item) do |f|%>
       <%= f.number_field :quantity, min:1 %>
@@ -22,14 +24,23 @@
     </td>
 
 
-    <td><%= cart_item.quantity * cart_item.item.price %></td>
+    <td><%= (cart_item.quantity * cart_item.item.price * 1.1).floor%></td>
     <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-danger" %></td>
   </tr>
   <% end %>
 </table>
 
-<%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+<div class="">
+  <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+</div>
 
-<div class="">合計金額</div>
+<table class="table table-bordered">
+  <tr>
+    <td class="active">合計金額</td>
+    <td><%= @total_price %></td>
+  </tr>
+</table>
 
-<%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+<div class="text-center">
+  <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+</div>
