--- a/app/views/customers/homes/top.html.erb
+++ b/app/views/customers/homes/top.html.erb
@@ -3,6 +3,7 @@
     <div class="col-lg-3">
       <%= render "layouts/genre_search", genres: @genres %>
     </div>
+
     <div class="col-lg-6">
       ようこそ、NaganoCakeへ！
       このサイトは、ケーキ販売のECサイトになります。
@@ -10,19 +11,34 @@
       購入には会員登録が必要になります。
       <h1>オススメ商品</h1>
 
-      <div>
-         
 
+      <div class="flex">
+        <% @items.sample(4).each do |item| %>
+        <%= link_to item_path(item.id), :style=>"color: black; text-decoration: none;" do%>
 
+        <div class="">
+          <%= attachment_image_tag item, :image, format: 'jpeg', size: "100x100" %>
+        </div>
 
+        <div class="">
+          <%= item.name %>
+        </div>
 
-
-
-
-
-
-         
+        <div class="">
+          ¥<%= item.price %>
+        </div>
+        <% end %>
+        <% end %>
       </div>
+
     </div>
   </div>
 </div>
+
+
+<style>
+  .flex {
+    display: flex;
+    justify-content:space-around;
+  }
+</style>
