--- a/app/views/customers/orders/new.html.erb
+++ b/app/views/customers/orders/new.html.erb
@@ -2,69 +2,66 @@
 
 <h3>支払い方法</h3>
 
-<%= form_tag(orders_path, method: :post) do %>
+<%= form_for @order, url: orders_confirm_path, method: :post do |f| %>
 <div class="">
   <h4>
-    <%= radio_button_tag :payment_method, "クレジットカード"%>
-    <%= label_tag :payment_method, "クレジットカード", value: :"クレジットカード"%>
+    <%= f.radio_button :payment_method, "クレジットカード"%>
+    <%= f.label :payment_method, "クレジットカード", value: :"クレジットカード"%>
   </h4>
 </div>
 
 <div class="">
   <h4>
-    <%= radio_button_tag :payment_method, "銀行振込"%>
-    <%= label_tag :payment_method, "銀行振込", value: :"銀行振込" %>
+    <%= f.radio_button :payment_method, "銀行振込"%>
+    <%= f.label :payment_method, "銀行振込", value: :"銀行振込" %>
   </h4>
 </div>
-<% end %>
 
 <h3>お届け先</h3>
 
-<%= form_for(@address, url: addresses_path, method: :post) do |f| %>
-
+<%= f.fields_for @address, url: addresses_path do |a| %>
 <div class="">
   <h4>
-    <%= f.radio_button :address, "ご自身の住所"%>
-    <%= f.label :address, "ご自身の住所" %>
+    <%= a.radio_button :address, "ご自身の住所"%>
+    <%= a.label :address, "ご自身の住所" %>
     <%= current_customer.postel_code + current_customer.address + current_customer.family_name + current_customer.first_name %>
   </h4>
 </div>
 
 <div class="">
   <h4>
-    <%= f.radio_button :address, "登録済み住所から選択"%>
-    <%= f.label :address, "登録済み住所から選択" %>
+    <%= a.radio_button :address, "登録済み住所から選択"%>
+    <%= a.label :address, "登録済み住所から選択" %>
   </h4>
 </div>
 
 
 <div class="">
   <h4>
-    <%= f.radio_button :address, "新しいお届け先"%>
-    <%= f.label :address, "新しいお届け先" %>
+    <%= a.radio_button :address, "新しいお届け先"%>
+    <%= a.label :address, "新しいお届け先" %>
   </h4>
 </div>
-
+<div class="row">
 <div class="">
-  <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
-  <%= f.text_field :post_code %>
+  <%= a.label :post_code, "郵便番号(ハイフンなし)" %>
+  <%= a.text_field :post_code %>
 </div>
 
 <div class="">
-  <%= f.label :address, "住所" %>
-  <%= f.text_field :address %>
+  <%= a.label :address, "住所" %>
+  <%= a.text_field :address, class: "col-md-offset-1" %>
 </div>
 
 <div class="">
-  <%= f.label :name, "宛名" %>
-  <%= f.text_field :name %>
+  <%= a.label :name, "宛名" %>
+  <%= a.text_field :name, class: "col-md-offset-1"%>
 </div>
+<% end %>
 
 <div class="">
   <%= f.submit :"確認画面へ進む", :class => "btn btn-primary" %>
 </div>
+</div>
+
 <% end %>
-
-
-
-
