--- a/app/views/customers/cart_items/index.html.erb
+++ b/app/views/customers/cart_items/index.html.erb
@@ -29,7 +29,7 @@
 </table>
 
 <div class="">
-  <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+  <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
 </div>
 <div class="">合計金額</div>
 <td class="text-right"><%= @customer.cart_item_sum %>円</td>
