--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -12,7 +12,7 @@
 			<tbody>
 				<% @orders.each do |order| %>
 				<tr>
-					<td><%= order.created_at %></td>
+					<td><%= order.created_at.strftime('%Y/%m/%d') %></td>
 					<td><%= order.customer.family_name %>
 						<%= order.customer.first_name %></td>
 					<td><%= order.order_items.sum(:quantity) %></td>
