--- a/app/views/customers/items/show.html.erb
+++ b/app/views/customers/items/show.html.erb
@@ -5,7 +5,8 @@
   <%= attachment_image_tag @item, :image, format: 'jpeg', size: "100x100" %>
 </div>
 
-
+<%= attachment_image_tag @item, :image, format: 'jpeg', size: "100x100", fallback: "no_image.jpg",
+        class: "offset-md-2" %>
 <h2><%= @item.name %></h2>
 <p><%= @item.introduction %></p>
 <h1><%= (@item.price * Constants::TAX).round %>(税込)</h1>
