--- a/app/views/customers/items/index.html.erb
+++ b/app/views/customers/items/index.html.erb
@@ -26,3 +26,9 @@
     </div>
   </div>
 </div>
+
+<div class = "row">
+        <div class = "offset-md-4">
+          <%= paginate @items %>
+        </div>
+      </div>
