--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -21,3 +21,8 @@
 			</tbody>
 		</table>
 	</div>
+	<div class = "row">
+		<div class = "offset-md-4">
+			<%= paginate @customers %>
+		</div>
+	</div>
