--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -22,3 +22,9 @@
 			</tbody>
 		</table>
 	</div>
+
+	<div class = "row">
+		<div class = "offset-md-4">
+			<%= paginate @orders %>
+		</div>
+	</div>
