--- a/app/views/customers/orders/index.html.erb
+++ b/app/views/customers/orders/index.html.erb
@@ -35,6 +35,11 @@
 					</tbody>
 				</table>
 			</div>
+			<div class = "row">
+				<div class = "offset-md-4">
+					<%= paginate @orders %>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
