--- a/app/views/customers/orders/show.html.erb
+++ b/app/views/customers/orders/show.html.erb
@@ -11,7 +11,7 @@
 							<tbody>
 								<tr>
 									<th class="active">注文日</th>
-									<td><%= @order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
+									<td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
 								</tr>
 								<tr>
 									<th class="active">配送先</th>
