[Add] bootstrap4　修正

--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -6,10 +6,12 @@
 		</div>
 	</div>
 
-	<div class = "col-md-11 clearfix">
-		<%= link_to new_admins_item_path do %>
-			<button class = "float-right btn btn-info rounded-circle">+</button>
-		<% end %>
+	<div class = "row">
+		<div class = "col-md-11 clearfix">
+			<%= link_to new_admins_item_path do %>
+				<button class = "float-right btn btn-success rounded-circle">+</button>
+			<% end %>
+		</div>
 	</div>
 
 	<div class = "row">
