--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -23,23 +23,30 @@
 		<% end %>
 
 		<div class = "row">
-			<%= f.label :name, 'ジャンル', class: "mr-3 pt-2 control-label" %>
-			<%= f.text_field :name %>
-
-  			<%= f.radio_button :is_active, :true, class: "mt-3 mr-3 ml-2" %>
-	  		<%= f.label :is_active, "有効", value: :true, class: "d-flex align-items-center" %>
-
-		  	<%= f.radio_button :is_active, :false, class: "mt-3 mr-3 ml-4" %>
-		  	<%= f.label :is_active, "無効", value: :false, class: "d-flex align-items-center" %>
-
-			<%= f.submit '追加', class: "ml-4 btn btn-primary" %>
+			<div class = "col-md-1">
+				<%= f.label :name, 'ジャンル' %>
+			</div>
+			<div class = "col-md-2">
+				<%= f.text_field :name %>
+			</div>
+			<div class = "col-md-1">
+  				<%= f.radio_button :is_active, :true %>
+	  			<%= f.label :is_active, "有効", value: :true %>
+			</div>
+			<div class = "col-md-1">
+		  		<%= f.radio_button :is_active, :false %>
+		  		<%= f.label :is_active, "無効", value: :false %>
+			</div>
+			<div class = "col-md-7">
+				<%= f.submit '追加', class: "btn btn-primary rounded-pill" %>
+			</div>
 		</div>
 
 	<% end %>
 
-	<div class = "row">
+	<div class = "row mt-5">
 		<div class = "col-md-6">
-			<table class = "mt-5 table table-hover">
+			<table class = "table table-hover">
 				<thead class = "thead-light">
 					<tr>
 						<th>ジャンル</th>
