--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -22,38 +22,65 @@
 			</section>
 		<% end %>
 
-		<div class = "col-md-9">
-			<div class = "row">
-				<div class = "col-md-6">
-					<%= f.attachment_field :image %>
-				</div>
-				<div class = "col-md-6">
-					<div class = "row mb-3">
-					<%= f.label :商品名, class: "col-md-3 d-flex align-items-center" %>
-					<%= f.text_field :name, class: "col-md-9" %>
+		<div class = "row">
+			<div class = "col-md-4">
+				<%= f.attachment_field :image %>
+			</div>
+			<div class = "col-md-4">
+
+				<div class = "row mb-3">
+					<div class = "col-md-3">
+						<%= f.label :商品名 %>
 					</div>
-					<div class = "row mb-3">
-					<%= f.label :商品説明, class: "col-md-3 d-flex align-items-center" %>
-					<%= f.text_area :introduction, class: "col-md-9" %>
-					</div>
-					<div class = "row mb-3">
-					<%= f.label :ジャンル, class: "col-md-3 d-flex align-items-center" %>
-					<%= f.collection_select :genre_id, Genre.all, :id, :name %>
-					</div>
-					<div class = "row mb-3">
-					<%= f.label :税抜価格, class: "col-md-3 d-flex align-items-center" %>
-					<%= f.number_field :price, class: "col-md-8" %><span class = "col-md-1 pt-2">円</span>
-					</div>
-					<div class = "row mb-3">
-					<%= f.label :販売ステータス, class: "col-md-3 d-flex align-items-center" %>
-					<%= f.select 'is_active', options_for_select([['販売中',1],['売切れ',0]]), include_blank: "選択して下さい" %>
+					<div class = "col-md-9">
+						<%= f.text_field :name, class: "w-75" %>
 					</div>
 				</div>
+
+				<div class = "row mb-3">
+					<div class = "col-md-3">
+						<%= f.label :商品説明 %>
+					</div>
+					<div class = "col-md-9">
+						<%= f.text_area :introduction, class: "w-75 py-4" %>
+					</div>
+				</div>
+
+				<div class = "row mb-3">
+					<div class = "col-md-3">
+						<%= f.label :ジャンル %>
+					</div>
+					<div class = "col-md-9">
+						<%= f.collection_select :genre_id, Genre.all, :id, :name %>
+					</div>
+				</div>
+
+				<div class = "row mb-3">
+					<div class = "col-md-3">
+						<%= f.label :税抜価格 %>
+					</div>
+					<div class = "col-md-9">
+						<%= f.number_field :price, class: "w-75" %><span class = "p-1">円</span>
+					</div>
+				</div>
+
+				<div class = "row mb-3">
+					<div class = "col-md-3" style = "font-size:13px;">
+						<%= f.label :販売, :style => 'margin:0;' %><br>
+						<%= f.label :ステータス %>
+					</div>
+					<div class = "col-md-9">
+						<%= f.select 'is_active', options_for_select([['販売中',1],['売切れ',0]]), include_blank: "選択して下さい" %>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
-		<div class = "col-md-11 clearfix">
-			<%= f.submit '新規登録', class: "float-right btn btn-success" %>
+		<div class = "row">
+			<div class = "col-md-11 clearfix">
+				<%= f.submit '新規登録', class: "float-right btn btn-success rounded-pill" %>
+			</div>
 		</div>
 
 	<% end %>
