--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -6,49 +6,72 @@
 		</div>
 	</div>
 
-	<div class = "col-md-8">
-		<div class = "row">
-			<div class = "col-md-6">
-				<%= attachment_image_tag @item, :image, format: 'jpeg', size: "250x200", fallback: "no_image.jpg",
-				class: "offset-md-2" %>
-			</div>
-			<div class = "col-md-6">
-				<div class = "row mb-5">
-				商品名
-				<%= @item.name %>
-				</div>
-				<div class = "row mb-5">
-				商品説明
-				<%= @item.introduction %>
-				</div>
-				<div class = "row mb-5">
-				ジャンル
-				<%= @item.genre.name %>
-				</div>
-				<div class = "row mb-5">
-				税込価格（税抜価格）
-				<%= @item.price %>
-				（<%= @price_tax.floor %>）円
-				</div>
-				<div class = "row mb-5">
-				販売ステータス
-				<% if @item.is_active == true %>
-					販売中
-				<% elsif @item.is_active == false %>
-					売切れ
-				<% end %>
-				</div>
+	<div class = "row">
+		<div class = "col-md-4">
+			<%= attachment_image_tag @item, :image, format: 'jpeg', size: "250x200", fallback: "no_image.jpg" %>
+		</div>
+		<div class = "col-md-4">
 
+			<div class = "row mb-3">
+				<div class = "col-md-3">
+					商品名
+				</div>
+				<div class = "col-md-9">
+					<%= @item.name %>
+				</div>
 			</div>
+
+			<div class = "row mb-3">
+				<div class = "col-md-3">
+					商品説明
+				</div>
+				<div class = "col-md-9">
+					<%= @item.introduction %>
+				</div>
+			</div>
+
+			<div class = "row mb-3">
+				<div class = "col-md-3">
+					ジャンル
+				</div>
+				<div class = "col-md-9">
+					<%= @item.genre.name %>
+				</div>
+			</div>
+
+			<div class = "row mb-4">
+				<div class = "col-md-6">
+					税抜価格（税込価格）
+				</div>
+				<div class = "col-md-6">
+					<%= @item.price %>（<%= @price_tax.floor %>）円
+				</div>
+			</div>
+
+			<div class = "row mb-4">
+				<div class = "col-md-5">
+					販売ステータス
+				</div>
+				<div class = "col-md-7">
+					<% if @item.is_active == true %>
+						販売中
+					<% elsif @item.is_active == false %>
+						売切れ
+					<% end %>
+				</div>
+			</div>
+
 		</div>
 	</div>
 
-	<div class = "col-md-11 clearfix">
-		<%= link_to edit_admins_item_path(@item.id) do %>
-			<button class = "float-right btn btn-primary">
-				編集する
-			</button>
-		<% end %>
+	<div class = "row">
+		<div class = "col-md-11 clearfix">
+			<%= link_to edit_admins_item_path(@item.id) do %>
+				<button class = "float-right btn btn-primary rounded-pill">
+					編集する
+				</button>
+			<% end %>
+		</div>
 	</div>
 
 </div>
