--- a/app/views/admins/searches/search.html.erb
+++ b/app/views/admins/searches/search.html.erb
@@ -1,93 +1,121 @@
 <% if @range == '1' %>
-	<section class = "customers-index">
-		<h3 class = "customers-index-headline">会員一覧</h3>
-		<table style = "width:100%;">
-			<thead>
-				<tr style = "border-top:2px solid black;border-bottom:2px solid black;">
-					<th style = "width:10%;padding:10px;font-size:18px;background-color:#eee;">会員ID</th>
-					<th style = "width:30%;padding:10px;font-size:18px;background-color:#eee;">氏名</th>
-					<th style = "width:10%;padding:10px;font-size:18px;background-color:#eee;">メールアドレス</th>
-					<th style = "width:10%;padding:10px;font-size:18px;background-color:#eee;">ステータス</th>
-				</tr>
-			</thead>
-			<% @customers.each do |customer| %>
-				<tbody>
-					<tr>
-						<td style = "width:10%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= customer.id %>
-						</td>
-						<td style = "width:30%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= link_to admins_customer_path(customer.id) do %>
-								<%= customer.family_name %><%= customer.first_name %>
-							<% end %>
-						</td>
-						<td style = "width:10%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= customer.email %>
-						</td>
-						<td style = "width:10%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<% if customer.is_deleted == false %>
-								有効
-							<% elsif customer.is_deleted == true %>
-								退会済み
-							<% end %>
-						</td>
-					</tr>
-				</tbody>
-			<% end %>
-		</table>
-		<%= paginate @customers %>
-	</section>
+	<div class = "container">
+
+		<div class = "row my-5">
+			<div class = "offset-md-1">
+				<h3><span class = "px-4 bg-light">会員一覧</span></h3>
+			</div>
+		</div>
+
+		<div class = "row">
+			<div class = "col-md-11">
+				<table class = "table table-hover">
+					<thead class = "thead-light">
+						<tr>
+							<th>会員ID</th>
+							<th>氏名</th>
+							<th>メールアドレス</th>
+							<th>ステータス</th>
+						</tr>
+					</thead>
+					<% @customers.each do |customer| %>
+						<tbody>
+							<tr>
+								<td>
+									<%= customer.id %>
+								</td>
+								<td>
+									<%= link_to admins_customer_path(customer.id) do %>
+										<%= customer.family_name %><%= customer.first_name %>
+									<% end %>
+								</td>
+								<td>
+									<%= customer.email %>
+								</td>
+								<td>
+									<% if customer.is_deleted == false %>
+										有効
+									<% elsif customer.is_deleted == true %>
+										退会済み
+									<% end %>
+								</td>
+							</tr>
+						</tbody>
+					<% end %>
+				</table>
+			</div>
+		</div>
+
+		<div class = "row">
+			<div class = "offset-md-4">
+				<%= paginate @customers %>
+			</div>
+		</div>
+
+	</div>
 <% elsif @range == '2' %>
-	<section class = "items-index">
-		<h3 class = "items-index-headline">商品一覧</h3>
-		<%= link_to new_admins_item_path do %>
-			<button class = "btn btn-default" style = "float:right;">+</button>
-		<% end %>
-		<table style = "width:100%;">
-			<thead>
-				<tr style = "border-top:2px solid black;border-bottom:2px solid black;">
-					<th style = "width:10%;padding:10px;font-size:18px;background-color:#eee;">商品ID</th>
-					<th style = "width:30%;padding:10px;font-size:18px;background-color:#eee;">商品名</th>
-					<th style = "width:10%;padding:10px;font-size:18px;background-color:#eee;">税抜価格</th>
-					<th style = "width:30%;padding:10px;font-size:18px;background-color:#eee;">ジャンル</th>
-					<th style = "width:10%;padding:10px;font-size:18px;background-color:#eee;">ステータス</th>
-				</tr>
-			</thead>
-			<% @items.each do |item| %>
-				<tbody>
-					<tr>
-						<td style = "width:10%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= item.id %>
-						</td>
-						<td style = "width:30%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= link_to item.name, admins_item_path(item.id) %>
-						</td>
-						<td style = "width:10%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= item.price %>
-						</td>
-						<td style = "width:30%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<%= item.genre.name %>
-						</td>
-						<td style = "width:10%;padding:10px;font-size:18px;border-bottom:2px solid black;
-									line-height:50px;">
-							<% if item.is_active == true %>
-								販売中
-							<% elsif item.is_active == false %>
-								売切れ
-							<% end %>
-						</td>
-					</tr>
-				</tbody>
-			<% end %>
-		</table>
-		<%= paginate @items %>
-	</section>
+	<div class = "container">
+
+		<div class = "row my-5">
+			<div class = "offset-md-1">
+				<h3><span class = "px-4 bg-light">商品一覧</span></h3>
+			</div>
+		</div>
+
+		<div class = "row">
+			<div class = "col-md-11 clearfix">
+				<%= link_to new_admins_item_path do %>
+					<button class = "float-right btn btn-success rounded-circle">+</button>
+				<% end %>
+			</div>
+		</div>
+
+		<div class = "row">
+			<div class = "col-md-11">
+				<table class = "table table-hover">
+					<thead class = "thead-light">
+						<tr>
+							<th>商品ID</th>
+							<th>商品名</th>
+							<th>税抜価格</th>
+							<th>ジャンル</th>
+							<th>ステータス</th>
+						</tr>
+					</thead>
+					<% @items.each do |item| %>
+						<tbody>
+							<tr>
+								<td>
+									<%= item.id %>
+								</td>
+								<td>
+									<%= link_to item.name, admins_item_path(item.id) %>
+								</td>
+								<td>
+									<%= item.price %>
+								</td>
+								<td>
+									<%= item.genre.name %>
+								</td>
+								<td>
+									<% if item.is_active == true %>
+										販売中
+									<% elsif item.is_active == false %>
+										売切れ
+									<% end %>
+								</td>
+							</tr>
+						</tbody>
+					<% end %>
+				</table>
+			</div>
+		</div>
+
+		<div class = "row">
+			<div class = "offset-md-4">
+				<%= paginate @items %>
+			</div>
+		</div>
+
+	</div>
 <% end %>
