--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -1,10 +1,27 @@
-<div class="container ">
-  <h3 class="row"><span class="bg-info">登録情報編集</span></h3>
-    <%= form_for(@customer ,url:customers_path,method: :patch, html: { class: "form-horizontal", novalidate: "novalidate" }) do |f| %>
-      <%= render "customers/customer_form_item",f:f %>
-        <%= f.submit "編集内容を保存する", class:"btn btn-success" %>
-        <%= link_to '退会する', unsubscribe_customer_path, class: "btn btn-danger" %>
-      </div>
-    <% end %>
-  </div>
+<div class="container-fluid">
+
+  	<div class = "row mt-5">
+    	<div class = "offset-md-2">
+     	 	<h3><span class = "px-4 bg-light">登録情報編集</span></h3>
+    	</div>
+  	</div>
+
+	<div class = "row mt-3">
+		<div class = "ml-5 col-md-8">
+		    <%= form_for(@customer ,url:customers_path,method: :patch) do |f| %>
+		      	<%= render "customers/customer_form_item",f:f %>
+
+		      	<div class = "row mt-4">
+		      		<div class = "offset-md-3">
+		        		<%= f.submit "編集内容を保存する", class: "px-5 btn btn-primary" %>
+		      		</div>
+		      		<div class = "offset-md-4">
+			        	<%= link_to '退会する', unsubscribe_customer_path, class: "px-4 btn btn-danger" %>
+		      		</div>
+		      	</div>
+
+		    <% end %>
+		</div>
+	</div>
+
 </div>
