--- a/app/views/customers/customers/unsubscribe.html.erb
+++ b/app/views/customers/customers/unsubscribe.html.erb
@@ -1,13 +1,14 @@
-<div class="">
-  <p class="">本当に退会しますか？</p>
-  <p class="">
+<div class = "container text-center pt-5">
+
+  <p class = "mt-5 font-weight-bold">本当に退会しますか？</p>
+
+  <p>
     退会すると、会員登録情報や<br>
     これまでの購入履歴が閲覧できなくなります。<br>
     退会する場合は、「退会する」をクリックしてください。<br>
   </p>
 
-  <div class="">
-    <%= link_to '退会しない', customers_path, class: "btn btn-primary" %>
-    <%= link_to '退会する', withdraw_customer_path, method: :patch, class: "btn btn-danger" %>
-  </div>
+  <%= link_to '退会しない', customers_path, class: "mt-3 mr-4 px-4 btn btn-primary" %>
+  <%= link_to '退会する', withdraw_customer_path, method: :patch, class: "mt-3 px-4 btn btn-danger" %>
+
 </div>
