--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,36 +1,52 @@
 <div class="container">
-  <h3 class="row"><span class="bg-info">新規会員登録画面</span></h3>
 
-  <%= form_for(resource, as: resource_name, url: customers_registration_path, html: { class: "form-horizontal ", novalidate: "novalidate" }) do |f| %>
-
-    <%= render "customers/shared/error_messages", resource: resource %>
-    <%= render "customers/customer_form_item",f:f %>
-
-    <div class="form-group">
-      <%= f.label "パスワード", class: "col-xs-2 control-label" %>
-      <div class="col-xs-3">
-        <%= f.password_field :password, autocomplete: "new-password", class:"form-control", placeholder: "パスワード（6文字以上）" %>
-      </div>
+  <div class = "row my-5">
+    <div class = "offset-md-1">
+      <h3><span class = "px-4 bg-light">新規会員登録</span></h3>
     </div>
+  </div>
 
-    <div class="form-group">
-      <%= f.label "パスワード（確認）", class: "col-xs-2 control-label" %>
-      <div class="col-xs-3">
-        <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "new-password", placeholder:  "パスワードの確認" %>
-      </div>
-    </div>
+  <div class = "row">
+    <div class = "col-md-10">
+      <%= form_for(resource, as: resource_name, url: customers_registration_path) do |f| %>
+        <%= render "customers/shared/error_messages", resource: resource %>
+        <%= render "customers/customer_form_item",f:f %>
 
-    <div class="form-group">
-      <div class="col-xs-offset-3 col-xs-2">
-        <%= f.submit "新規登録", class:"btn btn-success btn-block" %>
-      </div>
-    </div>
-
-    <div class="row">
-    <h3 ><span class="bg-info">既に登録済みの方</span></h3>
-        <div class="col-xs-11 col-xs-offset-1">
-          <p><%= link_to(new_customer_session_path) do %>こちら<% end %> からログインしてください。</p>
+        <div class = "row mb-2">
+          <div class = "col-md-4">
+            <%= f.label "パスワード" %>
+          </div>
+          <div class = "col-md-4">
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード（6文字以上）", class: "w-100" %>
+          </div>
         </div>
+
+        <div class="row mb-2">
+          <div class = "col-md-4">
+            <%= f.label "パスワード（確認）" %>
+          </div>
+          <div class = "col-md-4">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:  "パスワードの確認", class: "w-100" %>
+          </div>
+        </div>
+
+        <div class= "row mt-4">
+          <div class = "offset-md-5">
+            <%= f.submit "新規登録", class: "px-5 btn btn-success" %>
+          </div>
+        </div>
+
+        <div class = "row">
+          <div class = "offset-md-1">
+            <h3><span class = "px-4 bg-light">既に登録済みの方</span></h3>
+            <div class = "offset-md-3 col-md-12 mt-3">
+              <p><%= link_to(new_customer_session_path) do %>こちら<% end %> からログインしてください。</p>
+            </div>
+          </div>
+        </div>
+
+      <% end %>
     </div>
-  <% end %>
+  </div>
+
 </div>
