--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,45 +15,46 @@
     <header>
       <div class = "container-fluid">
         <div class = "row pt-5">
+
           <div class = "col-md-3 pt-2">
             <%= link_to root_path do %>
-              <%= image_tag 'logo_img.png', size: '300x100' %>
+              <%= image_tag 'logo4_img.png', size: '300x100' %>
             <% end %>
           </div>
 
-          <div class = "col-md-9 pt-5">
+          <div class = "col-md-9 pt-5 clearfix">
             <nav class = "float-right">
-              <ul class = "nav bg-info">
+              <ul class = "nav">
                 <!-- 管理者ログイン後 -->
                 <% if admin_signed_in? %>
                   <li class = "nav-item ml-5">
-                    <%= link_to "商品一覧", admins_items_path, class: "btn btn-dark" %>
+                    <%= link_to "商品一覧", admins_items_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "会員一覧", admins_customers_path, class: "btn btn-dark" %>
+                    <%= link_to "会員一覧", admins_customers_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-dark" %>
+                    <%= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "ジャンル一覧", admins_genres_path, class: "btn btn-dark" %>
+                    <%= link_to "ジャンル一覧", admins_genres_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item mr-5 ml-5">
                     <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-warning" %>
                   </li>
                 <!-- 会員ログイン後 -->
                 <% elsif customer_signed_in? %>
-                  <li class = "nav-item ml-5 pt-2">
+                  <li class = "nav-item ml-5 pt-2 text-danger">
                     ようこそ、<%= current_customer.family_name %><%= current_customer.first_name %>さん！
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "マイページ", customers_path, class: "btn btn-dark" %>
+                    <%= link_to "マイページ", customers_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "商品一覧", items_path, class: "btn btn-dark" %>
+                    <%= link_to "商品一覧", items_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "カート", cart_items_path, class: "btn btn-dark" %>
+                    <%= link_to "カート", cart_items_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item mr-5 ml-5">
                     <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-warning" %>
@@ -61,13 +62,13 @@
                 <!-- ログイン前 -->
                 <% else %>
                   <li class = "nav-item ml-5">
-                    <%= link_to "About", homes_about_path, class: "btn btn-dark" %>
+                    <%= link_to "About", homes_about_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "商品一覧", items_path, class: "btn btn-dark" %>
+                    <%= link_to "商品一覧", items_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item ml-5">
-                    <%= link_to "新規登録", new_customers_registration_path, class: "btn btn-dark" %>
+                    <%= link_to "新規登録", new_customers_registration_path, class: "btn btn-info" %>
                   </li>
                   <li class = "nav-item mr-5 ml-5">
                     <%= link_to "ログイン", new_customer_session_path, class: "btn btn-warning" %>
@@ -75,17 +76,20 @@
                 <% end %>
               </ul>
             </nav>
+          </div>
 
-            <% if admin_signed_in? %>
-              <div class = "col-md-1">
+          <% if admin_signed_in? %>
+            <div class = "row w-100 mr-5">
+              <div class = "col-md-12 text-right">
                 <%= form_tag(admins_searches_path, method: :get) do %>
                   <%= text_field_tag(:word) %>
                   <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
                   <%= submit_tag '検索', class: "btn btn-primary" %>
                 <% end %>
               </div>
-            <% end %>
-          </div>
+            </div>
+          <% end %>
+
         </div>
 
       </div>
