--- a/app/views/admins/customers/index.html.erb
+++ b/app/views/admins/customers/index.html.erb
@@ -1,6 +1,13 @@
-<h2>会員一覧</h2>
-	<div class="col-xs=9">
-		<table class="table table-striped">
+<div class="container">
+
+	<div class="row">
+		<div class="col mt-3">
+
+			<h2>会員一覧</h2>
+
+	<div class="row">
+		<div class="col-12">
+		  	<table class="table table-striped">
 			<thead>
 				<tr>
 					<th>会員ID</th>
@@ -28,10 +35,16 @@
 				</tr>
 				<% end %>
 			</tbody>
-		</table>
+			</table>
+		</div>
 	</div>
+
+		</div>
+	</div>
+</div>
 	<div class = "row">
-		<div class = "offset-md-4">
+		<div class = "mx-auto">
 			<%= paginate @customers %>
 		</div>
 	</div>
+  
