--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,7 +1,17 @@
+<div class="container">
+
+	<div class="row">
+		<div class="col-md-6 col-xl-3 mt-3">
+
 <h2>管理者画面</h2>
 
-<p>本日の注文件数</p>
+		<p>本日の注文件数</p>
 
-      <p><%= link_to admins_today_orders_path do %>
+      	<p><%= link_to admins_today_orders_path do %>
         <%= Order.where(created_at:  Time.zone.now.all_day).count %>
-        <% end %>件</p>
+        <% end %>件
+    	</p>
+
+    	</div>
+    </div>
+</div>
