--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,3 +1,8 @@
+<div class="container">
+
+	<div class="row">
+		<div class="col mt-3">
+
 <h2>注文履歴一覧</h2>
 	<div class="col-xs=9">
 		<table class="table table-striped">
@@ -27,7 +32,12 @@
 	</div>
 
 	<div class = "row">
-		<div class = "offset-md-4">
+		<div class = "mx-auto">
 			<%= paginate @orders %>
 		</div>
 	</div>
+
+
+</div>
+</div>
+</div>
