--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -1,3 +1,10 @@
+<div class="container">
+
+	<div class="row">
+		<div class="col mt-3">
+
+
+
 <h2>注文履歴詳細</h2>
 	<table class="table">
 		<tbody>
@@ -75,3 +82,8 @@
 			</tr>
 		</tbody>
 	</table>
+
+
+</div>
+</div>
+</div>
