--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,33 +12,46 @@
   </head>
 
   <body>
-    <header>
-      <div class = "container-fluid">
-        <div class = "row pt-5">
-          <div class = "col-md-3 pt-2">
-            <%= link_to root_path do %>
-              <%= image_tag 'logo_img.png', size: '300x100' %>
-            <% end %>
-          </div>
 
-          <div class = "col-md-9 pt-5">
-            <nav class = "float-right">
-              <ul class = "nav bg-info">
+<nav class="navbar navbar-expand-md navbar-light p-5" style="background-color: green;">
+  <a class="navbar-brand" href="/"><%= link_to root_path do %>
+              <%= image_tag 'logo_img.png', size: '300x100' %>
+            <% end %></a>
+
+              <% if admin_signed_in? %>
+              <div class = "col-md">
+                <%= form_tag(admins_searches_path, method: :get) do %>
+                  <%= text_field_tag(:word) %>
+                  <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
+                  <%= submit_tag '検索', class: "btn btn-primary" %>
+                <% end %>
+              </div>
+            <% end %>
+          
+
+  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-navi" aria-controls="bs-navi" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+    <div class="collapse navbar-collapse" id="bs-navi">
+    <ul class="navbar-nav ml-auto">
+
+
                 <!-- 管理者ログイン後 -->
                 <% if admin_signed_in? %>
-                  <li class = "nav-item ml-5">
+                  <li class = "nav-item m-2">
                     <%= link_to "商品一覧", admins_items_path, class: "btn btn-dark" %>
                   </li>
-                  <li class = "nav-item ml-5">
+                  <li class = "nav-item m-2">
                     <%= link_to "会員一覧", admins_customers_path, class: "btn btn-dark" %>
                   </li>
-                  <li class = "nav-item ml-5">
+                  <li class = "nav-item m-2">
                     <%= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-dark" %>
                   </li>
-                  <li class = "nav-item ml-5">
+                  <li class = "nav-item m-2">
                     <%= link_to "ジャンル一覧", admins_genres_path, class: "btn btn-dark" %>
                   </li>
-                  <li class = "nav-item mr-5 ml-5">
+                  <li class = "nav-item m-2">
                     <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "btn btn-warning" %>
                   </li>
                 <!-- 会員ログイン後 -->
@@ -74,22 +87,12 @@
                   </li>
                 <% end %>
               </ul>
-            </nav>
+            </div>
+            
 
-            <% if admin_signed_in? %>
-              <div class = "col-md-1">
-                <%= form_tag(admins_searches_path, method: :get) do %>
-                  <%= text_field_tag(:word) %>
-                  <%= select_tag 'range', options_for_select([['会員検索','1'],['商品検索','2']]) %>
-                  <%= submit_tag '検索', class: "btn btn-primary" %>
-                <% end %>
-              </div>
-            <% end %>
-          </div>
-        </div>
+        </nav>
 
-      </div>
-    </header><!-- /header -->
+      
     <%= yield %>
   </body>
 </html>
